--- a/style.css
+++ b/style.css
@@ -88,6 +88,12 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-size: 16px;
+  font-family: "Poppins", serif;
+}
+
+.projects-container h1 {
+  font-size: 2.5em;
 }
 
 .projects {
@@ -104,10 +110,47 @@ header {
 
 .projects a img {
   width: 100%;
-  border-radius: 10px 10px 60px 60px;
+  border-radius: 10px;
 }
 
-.projects a:hover {
+.project-description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 15px;
+  font-size: 1em;
+}
+
+.link-icons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  column-gap: 15px;
+  padding: 20px 0 0 0;
+  font-size: 1.2em;
+}
+
+.link-icons a {
+  display: flex;
+  align-items: center;
+  color: black;
+  text-decoration: none;
+  border: 1px solid black;
+  border-radius: 6px;
+  padding: 4px 10px;
+}
+
+.link-icons a:hover {
   transition: all 0.2s ease;
-  opacity: 0.6;
+  background-color: #ebebea86;
+}
+
+.icon {
+  font-size: 1em;
+}
+
+.icon-text {
+  font-size: 0.8em;
+  margin-left: 5px;
 }
