--- a/style.css
+++ b/style.css
@@ -77,7 +77,6 @@ header {
 
 .mission-description img {
   border-radius: 8px;
-  border: 2px outset #f7df1e;
   transform: rotate(4deg);
 }
 
@@ -117,8 +116,9 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px 15px;
+  padding: 10px 15px 0;
   font-size: 1em;
+  height: 100px;
 }
 
 .link-icons {
@@ -127,7 +127,7 @@ header {
   align-items: center;
   justify-content: center;
   column-gap: 15px;
-  padding: 20px 0 0 0;
+  padding: 10px 0 0 0;
   font-size: 1.2em;
 }
 
