--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  height: 100vh;
+  height: 100%;
   background: linear-gradient(0deg, #f3e579, #ebebea 60%);
 }
 
@@ -89,16 +89,14 @@ header {
   justify-content: center;
   font-size: 16px;
   font-family: "Poppins", serif;
-}
-
-.projects-container h1 {
-  font-size: 2.5em;
+  padding: 0 0 16px 0;
 }
 
 .projects {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 16px;
+  column-gap: 16px;
+  row-gap: 26px;
   margin: 16px 0 0 0;
 }
 
@@ -118,7 +116,7 @@ header {
   align-items: center;
   padding: 10px 15px 0;
   font-size: 1em;
-  height: 100px;
+  min-height: 86px;
 }
 
 .link-icons-container {
@@ -127,7 +125,6 @@ header {
   align-items: center;
   justify-content: center;
   column-gap: 15px;
-  padding: 10px 0 0 0;
   font-size: 1.2em;
 }
 
@@ -173,4 +170,83 @@ header {
   font-size: 0.8em;
   margin-left: 5px;
   color: black;
+}
+
+/* Responsive */
+
+@media screen and (max-width: 2000px) {
+
+  header {
+    margin-top: 80px;
+  }
+
+  .description {
+    font-size: 12px;
+    line-height: 55px;
+  }
+
+  .logo img {
+    width: 150px;
+    height: 150px;
+  }
+
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .projects div {
+    width: 500px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .projects {
+    grid-template-columns: 1fr;
+  }
+
+  .mission-description {
+    margin: 0 20px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .mission-description {
+    flex-direction: column-reverse;
+  }
+}
+
+@media screen and (max-width: 600px) {
+
+  .mission-container {
+    margin: 135px 0;
+  }
+
+  .mission-description {
+    font-size: 16px;
+  }
+
+  .mission-description img {
+    width: 140px;
+    height: 140px;
+  }
+
+  .description {
+    font-size: 10px;
+    line-height: 45px;
+  }
+
+  .logo img {
+    width: 130px;
+    height: 130px;
+  }
+
+  .projects-container {
+    font-size: 14px;
+  }
+
+  .projects div {
+    width: 356px;
+  }
 }
